--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Primer titulo</title>
+	<title>Titulo modificado v1</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -14,6 +14,8 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
+			Continuamos donde se quedo la modificacion 
+			listo
 			Just some content
 		</p>
 	</main>
